--- a/OrderManagementSystem/bin/OrderManagementSystem.dll.config
+++ b/OrderManagementSystem/bin/OrderManagementSystem.dll.config
@@ -79,10 +79,15 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+ 
   <system.net>
     <mailSettings>
-      <smtp deliveryMethod="Network">
-        <network userName="from source mail" password="from source mail password" host="smtp.gmail.com" port="587" enableSsl="true"/>
+      <smtp from = "your mail@gmail.com" >
+        <network host="smtp.gmail.com"
+                port="587"
+                userName="your-mail"
+                password="Your password"
+                enableSsl="true" />
       </smtp>
     </mailSettings>
   </system.net>
